move one more class to a record